--- a/index.html
+++ b/index.html
@@ -1,127 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>DJ Website</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>DJ Website</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400&display=swap">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>DJ Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="home">
-            <h2>Welcome to our DJ Website</h2>
-            <p>We offer the best DJ services for your events.</p>
-        </section>
-        <section id="about">
-            <h2>About Us</h2>
-            <p>We are a team of experienced DJs who love music and entertaining people.</p>
-        </section>
-        <section id="services">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Wedding DJ</li>
-                <li>Birthday Party DJ</li>
-                <li>Corporate Event DJ</li>
-                <li>Club DJ</li>
-            </ul>
-            <p>Contact us to customize your DJ package.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name"><br>
+  <header>
+    <div class="container">
+      <nav>
+        <a href="#" class="logo">DJ Website</a>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br>
+  <main>
+    <section id="home">
+      <div class="container">
+        <h1>Welcome to Our DJ Website</h1>
+        <p>We offer the best DJ services for your events.</p>
+        <a href="#services" class="btn">View Our Services</a>
+      </div>
+    </section>
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message"></textarea><br>
+    <section id="about">
+      <div class="container">
+        <h2>About Us</h2>
+        <div class="row">
+          <div class="col-6">
+            <p>We are a team of experienced DJs who love music and entertaining people. Our mission is to make your event unforgettable by providing the best music and entertainment.</p>
+          </div>
+          <div class="col-6">
+            <img src="images/about.jpg" alt="DJ" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
 
-                <input type="submit" value="Submit">
-            </form>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 DJ Website. All rights reserved.</p>
-    </footer>
-</body>
-</html>
-CSS:
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-}
-
-nav ul li {
-    margin: 0 10px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-main {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-section {
-    margin-bottom: 40px;
-}
-
-h2 {
-    font-size: 32px;
-    margin-bottom: 10px;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-form {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-label {
-    margin-right: 10px;
-}
-
-input, textarea {
-    margin-bottom:
+    <section id="services">
+      <div class="container">
+        <h2>Our Services</h2>
+        <div class="row">
+          <div class="col-4">
+            <div class="card">
+              <img src="images/wedding.jpg" alt="Wedding DJ" class="card-img-top">
+              <div class="card-body">
+                <h3 class="card-title">Wedding DJ</h3>
+                <p class="card-text">We'll make sure your wedding reception is a night to remember.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+              <img src="images/birthday.jpg" alt="Birthday Party DJ" class="card-img-top">
+              <div class="card-body">
+                <h3 class="card-title">Birthday Party DJ</h3>
+                <p class="card-text">We'll keep the party going all night long.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+              <img src="images/corporate.jpg" alt="Corporate Event DJ" class="card-img-top">
+              <div class="card-body">
+                <h3 class="card-title">Corporate Event DJ</h3>
+                <p class="card-text">We'll set the right tone for your next corporate event.</p>
+              </div>
+            </div>
+          </div>
+        </div>
