--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DJ Website</title>
+  <title>Akinub DJ Duo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400&display=swap">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,40 +12,17 @@
   <header>
     <div class="container">
       <nav>
-        <a href="#" class="logo">DJ Website</a>
+        <a href="#" class="logo">Akinub DJ Duo</a>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="https://www.instagram.com/akinubiv/">Instagram</a></li>
+          <li><a href="mailto:booking@akinub.live">Book Us</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <section id="home">
-      <div class="container">
-        <h1>Welcome to Our DJ Website</h1>
-        <p>We offer the best DJ services for your events.</p>
-        <a href="#services" class="btn">View Our Services</a>
-      </div>
-    </section>
-
-    <section id="about">
-      <div class="container">
-        <h2>About Us</h2>
-        <div class="row">
-          <div class="col-6">
-            <p>We are a team of experienced DJs who love music and entertaining people. Our mission is to make your event unforgettable by providing the best music and entertainment.</p>
-          </div>
-          <div class="col-6">
-            <img src="images/about.jpg" alt="DJ" class="img-fluid">
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section id="services">
       <div class="container">
         <h2>Our Services</h2>
@@ -78,3 +55,15 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2023 Akinub DJ Duo</p>
+    </div>
+  </footer>
+
+</body>
+</html>
