--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Akinub DJ Duo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400&display=swap">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/1234567890.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -14,49 +15,14 @@
       <nav>
         <a href="#" class="logo">Akinub DJ Duo</a>
         <ul>
-          <li><a href="#services">Services</a></li>
-          <li><a href="https://www.instagram.com/akinubiv/">Instagram</a></li>
-          <li><a href="mailto:booking@akinub.live">Book Us</a></li>
+          <li><a href="https://www.instagram.com/akinubiv/"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="mailto:info@akinubdjduo.com"><i class="fas fa-envelope"></i></a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <section id="services">
-      <div class="container">
-        <h2>Our Services</h2>
-        <div class="row">
-          <div class="col-4">
-            <div class="card">
-              <img src="images/wedding.jpg" alt="Wedding DJ" class="card-img-top">
-              <div class="card-body">
-                <h3 class="card-title">Wedding DJ</h3>
-                <p class="card-text">We'll make sure your wedding reception is a night to remember.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="card">
-              <img src="images/birthday.jpg" alt="Birthday Party DJ" class="card-img-top">
-              <div class="card-body">
-                <h3 class="card-title">Birthday Party DJ</h3>
-                <p class="card-text">We'll keep the party going all night long.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="card">
-              <img src="images/corporate.jpg" alt="Corporate Event DJ" class="card-img-top">
-              <div class="card-body">
-                <h3 class="card-title">Corporate Event DJ</h3>
-                <p class="card-text">We'll set the right tone for your next corporate event.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
   </main>
 
   <footer>
