--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Akinub DJ Duo</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400&display=swap">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<title>Akinub DJ Duo</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <nav>
-        <a href="#" class="logo">Akinub DJ Duo</a>
-        <ul>
-          <li><a href="https://www.instagram.com/akinubiv/"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="mailto:info@akinubdjduo.com"><i class="fas fa-envelope"></i></a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+	<header>
+		<h1>Akinub DJ Duo</h1>
+		<div class="header-icons">
+			<a href="https://www.instagram.com/akinubiv/"><i class="fab fa-instagram"></i></a>
+			<a href="mailto:Booking@akinub.live"><i class="fas fa-envelope"></i></a>
+		</div>
+	</header>
 
-  <main>
-  </main>
+	<section id="owners">
+		<div class="owner">
+			<img src="akin.jpg">
+			<h2>Akin</h2>
+			<p>Co-Owner and founder</p>
+			<p>Lived in Brazil in his youth. Smart and innovative music enthusiast.</p>
+			<div class="owner-icons">
+				<a href="https://www.instagram.com/akinbiar/"><i class="fab fa-instagram"></i></a>
+			</div>
+		</div>
+		<div class="owner">
+			<img src="christian.jpg">
+			<h2>Christian</h2>
+			<p>Co-Owner and founder</p>
+			<p>From Brazil and loves the culture. Loves to party and have a fun time.</p>
+			<div class="owner-icons">
+				<a href="https://www.instagram.com/25nub/"><i class="fab fa-instagram"></i></a>
+			</div>
+		</div>
+	</section>
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2023 Akinub DJ Duo</p>
-    </div>
-  </footer>
-
+	<footer>
+		<a href="mailto:Booking@akinub.live">Booking@akinub.live</a>
+	</footer>
 </body>
 </html>
