--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Akinub DJ Duo</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
 </head>
 <body>
