--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8"
 	<title>Akinub DJ Duo</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
