--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<section id="owners">
 		<div class="owner">
-			<img src="akin.jpg">
+			<img src="images/akin.jpg" alt="Akin">
 			<h2>Akin</h2>
 			<p>Co-Owner and founder</p>
 			<p>Lived in Brazil in his youth. Smart and innovative music enthusiast.</p>
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="owner">
-			<img src="christian.jpg">
+			<img src="images/christian.jpg" alt="Christian">
 			<h2>Christian</h2>
 			<p>Co-Owner and founder</p>
 			<p>From Brazil and loves the culture. Loves to party and have a fun time.</p>
