--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Akinub DJ Duo</title>
+	<title>Akinub Live</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header>
-		<h1>Akinub DJ Duo</h1>
+		<h1>Akinub Live</h1>
 		<div class="header-icons">
 			<a href="https://www.instagram.com/akinubiv/"><i class="fab fa-instagram"></i></a>
 			<a href="mailto:Booking@akinub.live"><i class="fas fa-envelope"></i></a>
