--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Akinub Live</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
