--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<title>Akinub Live</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
+  	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FWJG98PXG0"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+ 	gtag('config', 'G-FWJG98PXG0');
+</script>
+  </script>
 </head>
 <body>
 	<header>
