--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<header>
 		<h1>Akinub Live</h1>
 		<div class="header-icons">
-			<a href="https://www.instagram.com/akinubiv/"><i class="fab fa-instagram"></i></a>
+			<a href="https://www.instagram.com/akinub.live/"><i class="fab fa-instagram"></i></a>
 			<a href="mailto:Booking@akinub.live"><i class="fas fa-envelope"></i></a>
 		</div>
 	</header>
