Christian är en bög

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<p>Co-Owner and founder</p>
 			<p>Lived in Brazil in his youth. Smart and innovative music enthusiast.</p>
 			<div class="owner-icons">
-				<a href="https://www.instagram.com/akinbiar/"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.instagram.com/akinbiar/" target="_blank"><i class="fab fa-instagram"></i></a>
 			</div>
 		</div>
 		<div class="owner">
@@ -41,7 +41,7 @@
 			<p>Co-Owner and founder</p>
 			<p>From Brazil and loves the culture. Loves to party and have a fun time.</p>
 			<div class="owner-icons">
-				<a href="https://www.instagram.com/25nub/"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.instagram.com/25nub/" target="_blank"><i class="fab fa-instagram"></i></a>
 			</div>
 		</div>
 	</section>
