--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Akinub Live</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/603f8f1740.js" crossorigin="anonymous"></script>
   	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FWJG98PXG0"></script>
+	<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-FWJG98PXG0"></script>
 	<script>
   	window.dataLayer = window.dataLayer || [];
   	function gtag(){dataLayer.push(arguments);}
   	gtag('js', new Date());
  	gtag('config', 'G-FWJG98PXG0');
 </script>
-  </script>
+  
 </head>
 <body>
 	<header>
 		<h1>Akinub Live</h1>
 		<div class="header-icons">
-			<a href="https://www.instagram.com/akinub.live/"><i class="fab fa-instagram"></i></a>
-			<a href="mailto:Booking@akinub.live"><i class="fas fa-envelope"></i></a>
+			<a href="https://www.instagram.com/akinub.live/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+			<a href="mailto:Booking@akinub.live"><i class="fas fa-envelope" aria-hidden="true"></i></a>
 		</div>
 	</header>
 
@@ -30,18 +28,66 @@
 			<img src="images/akin.jpg" alt="Akin">
 			<h2>Akin</h2>
 			<p>Co-Owner and founder</p>
-			<p>Lived in Brazil in his youth. Smart and innovative music enthusiast.</p>
+			<p>
+</p><p>Akinius, a soul of Rio de Janeiro
+His music, a tribute to the city's bolero
+With favela funk and house beats so bold
+He takes us on a journey, a story untold</p><p>
+
+</p><p>Born and raised in the streets of Rio
+Where music is a way of life, a flow
+Akinius, a product of the city's soul
+A true artist, a sonic explorer in whole</p><p>
+
+</p><p>His beats, a celebration of life and rhythm
+A fusion of genres, a true sonic hymn
+From the favelas to the clubs he plays
+His music, a force that never sways</p><p>
+
+</p><p>Akinius, a master of his craft
+His beats, a sound that's hard to graft
+He blends and fuses sounds with ease
+A true artist, a sonic breeze</p><p>
+
+</p><p>So let the favela funk and house beats flow
+As Akinius takes us on a musical show
+A journey that's true to Rio's heart
+A tribute to the city's sonic art.</p>
 			<div class="owner-icons">
-				<a href="https://www.instagram.com/akinbiar/" target="_blank"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.instagram.com/akinbiar/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 			</div>
 		</div>
 		<div class="owner">
 			<img src="images/christian.jpg" alt="Christian">
 			<h2>Christian</h2>
 			<p>Co-Owner and founder</p>
-			<p>From Brazil and loves the culture. Loves to party and have a fun time.</p>
+			<p>
+</p><p>DJ 25nub, a wizard of sound
+His favela funk beats, a rhythm unbound
+With each track, he transports us to Brazil
+A sonic journey that's real</p><p>
+
+</p><p>His music, a celebration of life
+A tribute to the strength in strife
+A blend of beats and melodies so bold
+That makes our hearts and bodies unfold</p><p>
+
+</p><p>DJ 25nub, a master of his craft
+His favela funk beats, a rhythmic raft
+He takes us to the heart of the favelas
+Where music is a force that never mellows</p><p>
+
+</p><p>With every beat, he ignites our souls
+As his music takes us to new roles
+A true artist, a sonic innovator
+His music, a true liberator</p><p>
+
+</p><p>So let the favela funk move you
+Let DJ 25nub's rhythm groove you
+A musical journey like no other
+A true homage to Brazil's sonic wonder.</p>
 			<div class="owner-icons">
-				<a href="https://www.instagram.com/25nub/" target="_blank"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.instagram.com/25nub/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 			</div>
 		</div>
 	</section>
@@ -49,5 +95,5 @@
 	<footer>
 		<a href="mailto:Booking@akinub.live">Booking@akinub.live</a>
 	</footer>
-</body>
-</html>
+
+</body></html>
