--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="owner">
 			<img src="images/akin.jpg" alt="Akin">
 			<h2>Akin</h2>
-			<p>Co-Owner and founder</p>
+			<p>DJ, Co-Owner and founder</p>
 			<p>
 </p><p>Akinius, a soul of Rio de Janeiro
 His music, a tribute to the city's bolero
@@ -60,7 +60,7 @@ A tribute to the city's sonic art.</p>
 		<div class="owner">
 			<img src="images/christian.jpg" alt="Christian">
 			<h2>Christian</h2>
-			<p>Co-Owner and founder</p>
+			<p>DJ, Co-Owner and founder</p>
 			<p>
 </p><p>DJ 25nub, a wizard of sound
 His favela funk beats, a rhythm unbound
