--- a/index.html
+++ b/index.html
@@ -29,30 +29,7 @@
 			<h2>Akin</h2>
 			<p>DJ, Co-Owner and founder</p>
 			<p>
-</p><p>Akinius, a soul of Rio de Janeiro
-His music, a tribute to the city's bolero
-With favela funk and house beats so bold
-He takes us on a journey, a story untold</p><p>
-
-</p><p>Born and raised in the streets of Rio
-Where music is a way of life, a flow
-Akinius, a product of the city's soul
-A true artist, a sonic explorer in whole</p><p>
-
-</p><p>His beats, a celebration of life and rhythm
-A fusion of genres, a true sonic hymn
-From the favelas to the clubs he plays
-His music, a force that never sways</p><p>
-
-</p><p>Akinius, a master of his craft
-His beats, a sound that's hard to graft
-He blends and fuses sounds with ease
-A true artist, a sonic breeze</p><p>
-
-</p><p>So let the favela funk and house beats flow
-As Akinius takes us on a musical show
-A journey that's true to Rio's heart
-A tribute to the city's sonic art.</p>
+</p><p>LIVE LIVE LIVE. SHUTDOWN STHLM</p>
 			<div class="owner-icons">
 				<a href="https://www.instagram.com/akinbiar/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 			</div>
@@ -62,30 +39,12 @@ A tribute to the city's sonic art.</p>
 			<h2>Christian</h2>
 			<p>DJ, Co-Owner and founder</p>
 			<p>
-</p><p>DJ 25nub, a wizard of sound
+</p>LIVE LIVE LIVE. STHLM TAKEOVER<p>DJ 25nub, a wizard of sound
 His favela funk beats, a rhythm unbound
 With each track, he transports us to Brazil
 A sonic journey that's real</p><p>
 
-</p><p>His music, a celebration of life
-A tribute to the strength in strife
-A blend of beats and melodies so bold
-That makes our hearts and bodies unfold</p><p>
-
-</p><p>DJ 25nub, a master of his craft
-His favela funk beats, a rhythmic raft
-He takes us to the heart of the favelas
-Where music is a force that never mellows</p><p>
-
-</p><p>With every beat, he ignites our souls
-As his music takes us to new roles
-A true artist, a sonic innovator
-His music, a true liberator</p><p>
-
-</p><p>So let the favela funk move you
-Let DJ 25nub's rhythm groove you
-A musical journey like no other
-A true homage to Brazil's sonic wonder.</p>
+</p></p>
 			<div class="owner-icons">
 				<a href="https://www.instagram.com/25nub/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 			</div>
