--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
 			<h2>Christian</h2>
 			<p>DJ, Co-Owner and founder</p>
 			<p>
-</p>LIVE LIVE LIVE. STHLM TAKEOVER<p>DJ 25nub, a wizard of sound
-His favela funk beats, a rhythm unbound
-With each track, he transports us to Brazil
-A sonic journey that's real</p><p>
+</p>LIVE LIVE LIVE. STHLM TAKEOVER<p>
 
 </p></p>
 			<div class="owner-icons">
