--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<h2>Akin</h2>
 			<p>DJ, Co-Owner and founder</p>
 			<p>
-</p><p>LIVE LIVE LIVE. SHUTDOWN STHLM</p>
+</p>DJ 25nub, a wizard of sound His favela funk beats, a rhythm unbound With each track, he transports us to Brazil A sonic journey that's real</p>
 			<div class="owner-icons">
 				<a href="https://www.instagram.com/akinbiar/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 			</div>
