--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 			<img src="images/akin.jpg" alt="Akin">
 			<h2>Akin</h2>
 			<p>DJ, Co-Owner and founder</p>
-			<p>
-</p>DJ 25nub, a wizard of sound His favela funk beats, a rhythm unbound With each track, he transports us to Brazil A sonic journey that's real</p>
+			<p>Akinius, born and raised in Rio de Janeiro,
+Where the beats of funk flow in the streets,
+Grew up surrounded by music, a vibrant culture,
+And now his passion for it is hard to beat.
+</p></p>
 			<div class="owner-icons">
 				<a href="https://www.instagram.com/akinbiar/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 			</div>
@@ -39,7 +42,7 @@
 			<h2>Christian</h2>
 			<p>DJ, Co-Owner and founder</p>
 			<p>
-</p>LIVE LIVE LIVE. STHLM TAKEOVER<p>
+</p>DJ 25nub, a wizard of sound His favela funk beats, a rhythm unbound With each track, he transports us to Brazil A sonic journey that's real<p>
 
 </p></p>
 			<div class="owner-icons">
